--- a/indexhoen.html
+++ b/indexhoen.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="pokemon-card__info">
                     <span class="pokemon-card__id">#258</span>
-                    <h3 class="pokemon-card__name">Squirtle</h3>
+                    <h3 class="pokemon-card__name">Mudkip</h3>
                     <small class="pokemon-card__type"><span class="type__water">Agua</span></small>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="pokemon-card__info">
                     <span class="pokemon-card__id">#259</span>
-                    <h3 class="pokemon-card__name">Wartortle</h3>
+                    <h3 class="pokemon-card__name">Marshtomp</h3>
                     <small class="pokemon-card__type"><span class="type__water">Agua</span><span class="type__earth">Tierra</span></small>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="pokemon-card__info">
                     <span class="pokemon-card__id">#260</span>
-                    <h3 class="pokemon-card__name">Blastoise</h3>
+                    <h3 class="pokemon-card__name">Swampert</h3>
                     <small class="pokemon-card__type"><span class="type__water">Agua</span><span class="type__earth">Tierra</span></small>
                 </div>
             </div>
