--- a/indexjotho.html
+++ b/indexjotho.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="pokemon-card__info">
                     <span class="pokemon-card__id">#154</span>
-                    <h3 class="pokemon-card__name">Venusaur</h3>
+                    <h3 class="pokemon-card__name">Meganium</h3>
                     <small class="pokemon-card__type"><span class="type__grass">Planta</span></small>
                 </div>
             </div>
